--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,39 +10,38 @@
 </head><!-- #HEAD --> 
 <body>
 
-        <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&appId=587126731416477&version=v2.0";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script> <!-- #Facebook JavaScript SDK -->
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&appId=587126731416477&version=v2.0";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script> <!-- #Facebook JavaScript SDK -->
 
-        <div class="container">
-            <div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
-            <div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19 |
-              <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-m.png" alt="Facebook"></a> 
-              <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk-s.png')%> alt="Vkontakte" /></a>
-              <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-m.png" alt="Instagram"></a>
-              <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-m.png" alt="Youtube"></a>
-            </div>
-            
-    	  </div><!-- #BRAND container --> 
-        		
-		    <%= render 'layouts/header' %> <!-- Link to Header page --> 
-        <div class="container">
-		          <%= yield %>
-		    </div><!-- #container after header --> 
+  <div class="container">
+    <div class="brand">Студия живописи и рисунка Жанны Завидовой</div>
+    <div class="address-bar">ул. Покровка, д.27 | +7 916 657 57 19 |
+      <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('facebook-24.png')%> alt="Facebook"></a> 
+      <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk-24.png')%> alt="Vkontakte" /></a>
+      <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src=<%= asset_path('instagram-24.png')%> alt="Instagram"></a>
+      <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('youtube-24.png')%> alt="Youtube"></a>
+    </div>   
+  </div><!-- #BRAND container --> 
+  		
+  <%= render 'layouts/header' %> <!-- Link to Header page --> 
+  <div class="container">
+    <%= yield %>
+  </div><!-- #container after header --> 
 
-        <div class="panel-heading center">
-             <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/facebook-3-l.png" alt="Facebook"></a>
-             <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk.png')%> alt="Vkontakte" /></a>
-             <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/instagram-l.png" alt="Instagram"></a>
-             <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src="http://www.iconsdb.com/icons/preview/white/youtube-3-l.png" alt="Youtube"></a>
-        </div><!-- #panel-heading center aka Social Icons --> 
+  <div class="panel-heading center">
+     <a href="https://www.facebook.com/groups/409745725725001/" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('facebook.png')%> alt="Facebook"></a>
+     <a href="https://vk.com/club79357262" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('vk.png')%> alt="Vkontakte" /></a>
+     <a href="http://instagram.com/artjz.studia" class="ig-b- ig-b-48" target="_blank"><img src=<%= asset_path('instagram.png')%> alt="Instagram"></a>
+     <a href="http://www.youtube.com/channel/UCb0_9o7QwVh6hhRJXG3tkUQ" class="ig-b-48 ig-b-48" target="_blank"><img src=<%= asset_path('youtube.png')%> alt="Youtube"></a>
+  </div><!-- #panel-heading center aka Social Icons --> 
 
-        <%= render 'layouts/footer' %><!-- link to Footer page --> 
+  <%= render 'layouts/footer' %><!-- link to Footer page --> 
 
 </body>
 </html>
