--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,107 +1,107 @@
 <div class="container">    
 
-      <div class="jumbotron center">
+  <div class="jumbotron center">
 
-        	<div class="box">
-                    <div class="col-lg-12 text-center">
-                        <div id="carousel-example-generic" class="carousel slide">
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators hidden-xs">
-                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="6"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="7"></li>
-                                <li data-target="#carousel-example-generic" data-slide-to="8"></li>
-                            </ol>
+	<div class="row">
+        <div class="col-lg-12 text-center">
+            <div id="carousel-example-generic" class="carousel slide">
+                <!-- Indicators -->
+                <ol class="carousel-indicators hidden-xs">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+                </ol>
 
-                            <!-- Wrapper for slides -->
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-1.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-2.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-3.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-4.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-5.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-6.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-7.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-8.jpg') %>/>
-                                </div>
-                                <div class="item">
-                                    <img class="img-responsive img-full" src=<%= asset_path('slide-9.jpg') %>/>
-                                </div>
-                            </div><!-- #carousel-inner --> 
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-1.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-2.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-3.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-4.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-5.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-6.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-7.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-8.jpg') %>/>
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src=<%= asset_path('slide-9.jpg') %>/>
+                    </div>
+                </div><!-- #carousel-inner --> 
 
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                                <span class="icon-prev"></span>
-                            </a>
-                            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                                <span class="icon-next"></span>
-                            </a>
-                        </div><!-- #carousel-example-generic --> 
-                    </div></br><!-- #col-lg-12 --> 
-                    
-                    <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">О студии</br></h2>
-                        <hr>
-                    </div></br><!-- #col-lg-12  О студии--> 
-                    <div class="col-md-10">
-                        <p>Занятия проходят в небольших группах, что дает возможность каждому ученику заниматься по индивидуальной программе, составленной именно для него, исходя из его уровня и пожеланий, с тем, чтобы максимально развить творческие способности.</p>
-                        <p>У нас нет одной, усредненной программы для всех – ведь все мы разные, и пути развития у нас тоже различны.</p> 
-                        <p>Кто-то успешно идет по академической программе – шаг за шагом осваивая азы рисунка и живописи, постигая все хитрости светотени, формы, объема, перспективы на классических натюрмортах и гипсах, а кто-то от такого академизма «увядает», и тогда мы ищем индивидуальный путь  - то, что зацепит и вытащит на поверхность весь Ваш творческий потенциал.</p>
-                        <p>Я не раз наблюдала, как неожиданно, буквально за пару занятий расцветает, «взлетает» ученик, когда находит  свое – свою технику, свой формат.  Я считаю это очень важным и ценным, и к этому не обязательно иди долгой извилистой дорогой, а можно сразу взять в руки кисть, о которой мечтал с детства.</p>
-                        <p>Кто-то приходит и говорит: « я никогда в жизни не рисовал, но очень хочу писать маслом», и мы начинаем работать маслом, а кто-то приходит с давнишней мечтой об акварели, или пастели, и мы все это пробуем, буквально сразу на первом занятии. У всех свой путь к своим вершинам, ведь  творчество – это волшебный, непредсказуемый, но невероятно увлекательный процесс.</p>
-                        <p>Что является очень ценным и создает на занятиях ту неповторимую атмосферу погружения в искусство.</p>
-                        <p>Так же, исходя из моего опыта, я считаю очень важным и полезным то, что в группе одновременно занимаются  ученики разного уровня - те, кто пришел на первый урок, и те, кто занимается несколько лет, это взаимно развивает и обогащает учеников.  Это ценный опыт – видеть, как работают другие, ведь порой нужно именно увидеть, пронаблюдать другую манеру, способ рисования, так же как очень полезно наблюдать как одну и ту же постановку рисуют и в цвете и в графике.</p>
-                    </div></br><!-- #col-md-10 Text --> 
-                    <div class="clear"></div>
-                    <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">О преподавателе</br></h2>
-                        <hr>
-                    </div></br><!-- #col-lg-12 О преподавателе --> 
-                    
-                    <div class="col-md-10">
-                            <div class="featurette" id="services">
-                                <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %> alt="Завидова Жанна Борисовна" style="width:250px;height:250px"/>
-                                <div class="col-md-8">
-                                    <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
-                                    </h3>
-                                    <p class="lead text-left">
-                                        Закончила МГАХИ им Сурикова (1989-1995 гг.)</br>
-                                        Отделение станковой графики</br>
-                                        С 1995 по 1997 г. - стипендиат Академии Художеств РФ</br>
-                                        С 1995 г. - участник различных выставок в России и за рубежом</br>
-                                        Работы находятся в частных собраниях России, Швейцарии, США</br>
-                                        В 2008 г. создала авторскую студию живописи и рисунка.</br>
-                                    </p>
-                                </div><!-- col-md-8 -->     
-                            </div><!-- #featurette --> 
-                    </div><!-- #col-md-10 IMG+Опыт преподавателя -->         
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <span class="icon-prev"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <span class="icon-next"></span>
+                </a>
+            </div><!-- #carousel-example-generic --> 
+        </div></br><!-- #col-lg-12 --> 
+        
+        <div class="col-xs-10 col-md-10">
+            <hr>
+            <h2 class="intro-text text-center">О студии</br></h2>
+            <hr>
+        </div></br><!-- #col-lg-12  О студии--> 
+        <div class="col-md-10">
+            <p>Занятия проходят в небольших группах, что дает возможность каждому ученику заниматься по индивидуальной программе, составленной именно для него, исходя из его уровня и пожеланий, с тем, чтобы максимально развить творческие способности.</p>
+            <p>У нас нет одной, усредненной программы для всех – ведь все мы разные, и пути развития у нас тоже различны.</p> 
+            <p>Кто-то успешно идет по академической программе – шаг за шагом осваивая азы рисунка и живописи, постигая все хитрости светотени, формы, объема, перспективы на классических натюрмортах и гипсах, а кто-то от такого академизма «увядает», и тогда мы ищем индивидуальный путь  - то, что зацепит и вытащит на поверхность весь Ваш творческий потенциал.</p>
+            <p>Я не раз наблюдала, как неожиданно, буквально за пару занятий расцветает, «взлетает» ученик, когда находит  свое – свою технику, свой формат.  Я считаю это очень важным и ценным, и к этому не обязательно иди долгой извилистой дорогой, а можно сразу взять в руки кисть, о которой мечтал с детства.</p>
+            <p>Кто-то приходит и говорит: « я никогда в жизни не рисовал, но очень хочу писать маслом», и мы начинаем работать маслом, а кто-то приходит с давнишней мечтой об акварели, или пастели, и мы все это пробуем, буквально сразу на первом занятии. У всех свой путь к своим вершинам, ведь  творчество – это волшебный, непредсказуемый, но невероятно увлекательный процесс.</p>
+            <p>Что является очень ценным и создает на занятиях ту неповторимую атмосферу погружения в искусство.</p>
+            <p>Так же, исходя из моего опыта, я считаю очень важным и полезным то, что в группе одновременно занимаются  ученики разного уровня - те, кто пришел на первый урок, и те, кто занимается несколько лет, это взаимно развивает и обогащает учеников.  Это ценный опыт – видеть, как работают другие, ведь порой нужно именно увидеть, пронаблюдать другую манеру, способ рисования, так же как очень полезно наблюдать как одну и ту же постановку рисуют и в цвете и в графике.</p>
+        </div></br><!-- #col-md-10 Text --> 
+        <div class="clear"></div>
+        <div class="col-md-12">
+            <hr>
+            <h2 class="intro-text text-center">О преподавателе</br></h2>
+            <hr>
+        </div></br><!-- #col-lg-12 О преподавателе --> 
+        
+        <div class="col-md-10">
+            <div class="featurette" id="services">
+                <img class="featurette-image img-circle img-responsive pull-left" src=<%= asset_path('Janna-1.jpg') %> alt="Завидова Жанна Борисовна" style="width:250px;height:250px"/>
+                <div class="col-md-8">
+                    <h3 class="featurette-heading text-left">Завидова Жанна Борисовна</br>
+                    </h3>
+                    <p class="lead text-left">
+                        Закончила МГАХИ им Сурикова (1989-1995 гг.)</br>
+                        Отделение станковой графики</br>
+                        С 1995 по 1997 г. - стипендиат Академии Художеств РФ</br>
+                        С 1995 г. - участник различных выставок в России и за рубежом</br>
+                        Работы находятся в частных собраниях России, Швейцарии, США</br>
+                        В 2008 г. создала авторскую студию живописи и рисунка.</br>
+                    </p>
+                </div><!-- col-md-8 -->     
+            </div><!-- #featurette --> 
+        </div><!-- #col-md-10 IMG+Опыт преподавателя -->         
 
-                    <div class="clearfix"></div>
-            </div><!-- #box --> 
-           
-      </div><!-- #jumbotron center --> 
+        <div class="clearfix"></div>
+    </div><!-- #row --> 
+       
+  </div><!-- #jumbotron center --> 
 </div><!-- #container --> 
 
 
