--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,11 @@
 <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; 2014-2015</p>
-                </div>
-            </div>
-        </div>
+	<div class="container">
+    <div class="row2">
+      <div class="col-lg-12 text-center">
+        <p>Copyright &copy; 2015-2016</p>
+      </div>
+    </div>
+	</div>
 </footer>
 
          
