--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,90 +1,84 @@
 <div class="container"> 
-		<div class="jumbotron center">
-		    <div class="box">
-		            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Предлагаем вашему вниманию</br></h2>
-                        <hr>
-                </div></br><!-- #col-lg-12 Предлагаем вашему вниманию  -->
+	<div class="jumbotron center">
+    <div class="row">
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">Предлагаем вашему вниманию</br></h2>
+          <hr>
+        </div></br><!-- #col-lg-12 Предлагаем вашему вниманию  -->
 
-		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center" src=<%= asset_path('privateclass.jpg') %> alt="Мастер-класс для вечеринки" style="width:200px;height:200px"/>
-		                <h3>Мастер-класс для частных целей</h3>
-		                <p class="column">В студии проводятся открытые тематические мастер-классы для всех желающих.</p>
-		                <p class="column">Также Вы можете заказать мастер-класс на День Рождения или любую другую вечеринку.</p>
-		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для частных целей -->
-		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center" src=<%= asset_path('corporateclass.jpg') %> alt="Корпоративный мастер-класс" style="width:200px;height:200px"/>
-		                <h3>Мастер-класс для корпоративных целей</h3>
-		                <p class="column">Тематические мастер классы в вашем офисе для вашего коллектива или группы единомышленников.</p>
-		            </div><!-- #col-lg-4 col-sm-6 Мастер-класс для корпоративных целей -->
-		            <div class="col-lg-4 col-sm-6 text-center">
-		                <img class="img-circle img-responsive img-center" src=<%= asset_path('plener.jpg') %> alt="Пленэр" style="width:200px;height:200px"/>
-		                <h3>Пленер</h3>
-		                <p class="column">Занятия на пленере – возможность писать и рисовать в открытом пространстве, в естественных условиях, изучая, как естественное освещение, свет и воздух влияют на цвет и тон изображения.</p>
-		                
-		            </div><!-- #col-lg-4 col-sm-6 Пленэр -->
-                <div class="clear"></div>
+        <div class="col-lg-4 col-sm-6 text-center">
+          <img class="img-circle img-responsive img-center" src=<%= asset_path('privateclass.jpg') %> alt="Мастер-класс для вечеринки" style="width:200px;height:200px"/>
+          <h3>Мастер-класс для частных целей</h3>
+          <p class="column">В студии проводятся открытые тематические мастер-классы для всех желающих.</p>
+          <p class="column">Также Вы можете заказать мастер-класс на День Рождения или любую другую вечеринку.</p>
+        </div><!-- #col-lg-4 col-sm-6 Мастер-класс для частных целей -->
+        <div class="col-lg-4 col-sm-6 text-center">
+          <img class="img-circle img-responsive img-center" src=<%= asset_path('corporateclass.jpg') %> alt="Корпоративный мастер-класс" style="width:200px;height:200px"/>
+          <h3>Мастер-класс для корпоративных целей</h3>
+          <p class="column">Тематические мастер классы в вашем офисе для вашего коллектива или группы единомышленников.</p>
+        </div><!-- #col-lg-4 col-sm-6 Мастер-класс для корпоративных целей -->
+        <div class="col-lg-4 col-sm-6 text-center">
+          <img class="img-circle img-responsive img-center" src=<%= asset_path('plener.jpg') %> alt="Пленэр" style="width:200px;height:200px"/>
+          <h3>Пленер</h3>
+          <p class="column">Занятия на пленере – возможность писать и рисовать в открытом пространстве, в естественных условиях, изучая, как естественное освещение, свет и воздух влияют на цвет и тон изображения.</p>    
+        </div><!-- #col-lg-4 col-sm-6 Пленэр -->
+        <div class="clear"></div>
 
-                <div class="col-lg-12">
-	                <p>
-	                   Стоимость услуг уточняйте по <%= link_to "телефону", contacts_path %>
-	                </p> 
-                </div></br><!-- #col-lg-12 Стоимость услуг  -->
-                <div class="clear"></div>
-                
-		            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">События</br></h2>
-                        <hr>
-                </div></br><!-- #col-lg-12 События  -->
-                <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
+          <p>
+             Стоимость услуг уточняйте по <%= link_to "телефону", contacts_path %>
+          </p> 
+        </div></br><!-- #col-lg-12 Стоимость услуг  -->
+        <div class="clear"></div>
+        
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">События</br></h2>
+          <hr>
+        </div></br><!-- #col-lg-12 События  -->
+        <div class="col-lg-12 text-center">
 
-                	   <div class="col-md-10 col-sm-10">
-                	   	   <h2>Курс пастельного рисунка</h2>
-                	       <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.30</h3> 
-                	       <p>Новый курс по пастели, который объединяет в себе два направления - освоение пастели и базовых основ классического рисунка.</p>
-		                     <img class="img-responsive img-border img-full" src=<%= asset_path('pastelkurs.jpg') %>/>
-		                     
-												<button type="button" class="btn btn-default btn-lg" data-toggle="collapse" data-target="#demo" aria-expanded="true" aria-controls="demo">Подробнее о курсе 
-												</button>
+	    	   <div class="col-md-10 col-sm-10">
+	    	   	   <h2>Курс пастельного рисунка</h2>
+	    	       <h3>15, 22, 29 ноября и 6, 13 декабря 2014г с 12.00 до 14.30</h3> 
+	    	       <p>Новый курс по пастели, который объединяет в себе два направления - освоение пастели и базовых основ классического рисунка.</p>
+	             <img class="img-responsive img-border img-full" src=<%= asset_path('pastelkurs.jpg') %>/>
+	             
+							<button type="button" class="btn btn-default btn-lg" data-toggle="collapse" data-target="#demo" aria-expanded="true" aria-controls="demo">Подробнее о курсе 
+							</button>
 
-												<div id="demo" class="collapse">
-													<h3>Урок 1.</h3>
-		                      <p>
-													 Изучаем базовые основы композиции и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции, компоновка в круг, квадрат. Правила перспективы. Изучаем технику пастели.
-												  </p>
-												  <h3>Урок 2.</h3>
-													<p>
-														Изучаем форму – шар, эллипс, конус. Учимся изображать тон, свет, тень. Быстрые рисунки геометрических фигур и эскизы цветов для практики. Рисуем натюрморт с предметами, применяя на практике правила композиции, перспективы, формы и светотени. 
-													</p>	
-												  <h3>Урок 3.</h3>
-													<p>
-														Изучаем штрих, линии и тон. Работа на черной бумаге белым карандашом и пастелью – изображение фактуры стекла, керамики и растений. Свет и тень.
-													</p>	
-												  <h3>Урок 4.</h3>
-													<p>
-														Цвет. Контрастные цвета, сближенные цвета. Соотношение цвета и тона. Рисуем пастелью – две композиции, одну на контрасте и вторую на сближенных цветах.
-	                        </p>
-                          <h3>Урок 5.</h3> 
-	                        <p>
-	                         	Рисуем пастелью на цветной бумаге – учимся использовать цвет фона в изображении. Рисунок на контрастном фоне – изучаем, как контрастный цвет фона может обогатить нашу композицию и дать пастели больше цветовых решений и рисунок на сближенном фоне – учимся, как изображать тонкие сближенные цвета.
-	                        </p>	 
-                          <p>
-                         	 После каждого занятия дается домашнее задание, выполнение которого желательно для закрепления полученных знаний и практики, что поможет вам наилучшим образом использовать все полученные навыки для дальнейшей работы.
-                         	</p>
-												</div>
-												<hr>
-		                </div><!-- #col-md-10 col-sm-10 Курс «Рисунок для ландшафтных дизайнеров и флористов» -->
-                	   
-                </div><!-- #col-lg-12 Курс «Рисунок для ландшафтных дизайнеров и флористов» --> 	
+							<div id="demo" class="collapse">
+								<h3>Урок 1.</h3>
+	              <p>
+								 Изучаем базовые основы композиции и перспективы – для грамотного расположения рисунка на листе. Правила компоновки горизонтальной и вертикальной композиции, компоновка в круг, квадрат. Правила перспективы. Изучаем технику пастели.
+							  </p>
+							  <h3>Урок 2.</h3>
+								<p>
+									Изучаем форму – шар, эллипс, конус. Учимся изображать тон, свет, тень. Быстрые рисунки геометрических фигур и эскизы цветов для практики. Рисуем натюрморт с предметами, применяя на практике правила композиции, перспективы, формы и светотени. 
+								</p>	
+							  <h3>Урок 3.</h3>
+								<p>
+									Изучаем штрих, линии и тон. Работа на черной бумаге белым карандашом и пастелью – изображение фактуры стекла, керамики и растений. Свет и тень.
+								</p>	
+							  <h3>Урок 4.</h3>
+								<p>
+									Цвет. Контрастные цвета, сближенные цвета. Соотношение цвета и тона. Рисуем пастелью – две композиции, одну на контрасте и вторую на сближенных цветах.
+	              </p>
+	              <h3>Урок 5.</h3> 
+	              <p>
+	               	Рисуем пастелью на цветной бумаге – учимся использовать цвет фона в изображении. Рисунок на контрастном фоне – изучаем, как контрастный цвет фона может обогатить нашу композицию и дать пастели больше цветовых решений и рисунок на сближенном фоне – учимся, как изображать тонкие сближенные цвета.
+	              </p>	 
+	              <p>
+	             	 После каждого занятия дается домашнее задание, выполнение которого желательно для закрепления полученных знаний и практики, что поможет вам наилучшим образом использовать все полученные навыки для дальнейшей работы.
+	             	</p>
+							</div>
+							<hr>
+	        </div><!-- #col-md-10 col-sm-10 Курс «Рисунок для ландшафтных дизайнеров и флористов» -->
+        	   
+        </div><!-- #col-lg-12 Курс «Рисунок для ландшафтных дизайнеров и флористов» --> 	
 
-                
-
-
-		            <div class="clearfix"></div>
-		      </div><!-- #box --> 
-		 
-		 
-		</div><!-- #jumbotron center --> 
+        <div class="clearfix"></div>
+    </div><!-- #row --> 
+	</div><!-- #jumbotron center --> 
 </div><!-- #container -->		
