--- a/app/views/pages/gallery.html.erb
+++ b/app/views/pages/gallery.html.erb
@@ -1,69 +1,67 @@
 <div class="container"> 
 
-		<div class="jumbotron">
-         <div class="box">
-            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Живопись</br></h2>
-                        <hr>
-            </div></br><!-- #col-lg-12  Живопись -->       
-				    <div class="slider center" id = "gallery">
-				        <div><img src=<%= asset_path('givopis1.jpg') %> title="Живопись 1" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis_2.jpg') %> title="Живопись 2" alt="Живопись" class="" height="369"></div>
-								<div><img src=<%= asset_path('givopis3.jpg') %> title="Живопись 3" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis_4.jpg') %> title="Живопись 4" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis5.jpg') %> title="Живопись 5" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis6.jpg') %> title="Живопись 6" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis_7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div> 
-								<div><img src=<%= asset_path('givopis_8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div>  
-								<div><img src=<%= asset_path('givopis9.jpg') %> title="Живопись 9" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis10.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis11.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis12.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
-								<div><img src=<%= asset_path('givopis13.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
-								
-				    </div><!-- #slider center gallery -->
+	<div class="jumbotron">
+      <div class="row">
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">Живопись</br></h2>
+          <hr>
+        </div></br><!-- #col-lg-12  Живопись -->       
+		    <div class="slider center" id = "gallery">
+	                <div><img src=<%= asset_path('givopis1.jpg') %> title="Живопись 1" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis_2.jpg') %> title="Живопись 2" alt="Живопись" class="" height="369"></div>
+					<div><img src=<%= asset_path('givopis3.jpg') %> title="Живопись 3" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis_4.jpg') %> title="Живопись 4" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis5.jpg') %> title="Живопись 5" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis6.jpg') %> title="Живопись 6" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis_7.jpg') %> title="Живопись 7" alt="Живопись" class="" height="350"></div> 
+					<div><img src=<%= asset_path('givopis_8.jpg') %> title="Живопись 8" alt="Живопись" class="" height="350"></div>  
+					<div><img src=<%= asset_path('givopis9.jpg') %> title="Живопись 9" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis10.jpg') %> title="Живопись 10" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis11.jpg') %> title="Живопись 11" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis12.jpg') %> title="Живопись 12" alt="Живопись" class="" height="350"></div>
+					<div><img src=<%= asset_path('givopis13.jpg') %> title="Живопись 13" alt="Живопись" class="" height="350"></div>		
+		    </div><!-- #slider center gallery -->
 
-            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Рисунок</br></h2>
-                        <hr>
-            </div></br><!-- #col-lg-12  Рисунок -->  
-				    <div class="slider center" id = "gallery2">
-				        <div><img src=<%= asset_path('risunok1.jpg') %> title="Рисунок 1" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok2.jpg') %> title="Рисунок 2" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok3.jpg') %> title="Рисунок 3" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok4.jpg') %> title="Рисунок 4" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok_5.jpg') %> title="Рисунок 5" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok_6.jpg') %> title="Рисунок 6" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok_7.jpg') %> title="Рисунок 7" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok_8.jpg') %> title="Рисунок 8" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok9.jpg') %> title="Рисунок 9" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok10.jpg') %> title="Рисунок 10" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok11.jpg') %> title="Рисунок 11" alt="Рисунок" class="" height="350"></div>
-								<div><img src=<%= asset_path('risunok12.jpg') %> title="Рисунок 12" alt="Рисунок" class="" height="350"></div>
-				    </div><!-- #slider center -->
-            
-            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Декор</br></h2>
-                        <hr>
-            </div></br><!-- #col-lg-12  Декор -->  
-				    <div class="slider center" id = "gallery3">
-				        <div><img src=<%= asset_path('dekor1.jpg') %> title="Декор 1" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor2.jpg') %> title="Декор 2" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor3.jpg') %> title="Декор 3" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor4.jpg') %> title="Декор 4" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor5.jpg') %> title="Декор 5" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor6.jpg') %> title="Декор 6" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor7.jpg') %> title="Декор 7" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor8.jpg') %> title="Декор 8" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor9.jpg') %> title="Декор 9" alt="Декор" class="" height="350"></div>
-								<div><img src=<%= asset_path('dekor10.jpg') %> title="Декор 10" alt="Декор" class="" height="350"></div>
-				    </div><!-- #slider center -->
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">Рисунок</br></h2>
+          <hr>
+        </div></br><!-- #col-lg-12  Рисунок -->  
+		    <div class="slider center" id = "gallery2">
+	                <div><img src=<%= asset_path('risunok1.jpg') %> title="Рисунок 1" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok2.jpg') %> title="Рисунок 2" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok3.jpg') %> title="Рисунок 3" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok4.jpg') %> title="Рисунок 4" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok_5.jpg') %> title="Рисунок 5" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok_6.jpg') %> title="Рисунок 6" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok_7.jpg') %> title="Рисунок 7" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok_8.jpg') %> title="Рисунок 8" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok9.jpg') %> title="Рисунок 9" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok10.jpg') %> title="Рисунок 10" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok11.jpg') %> title="Рисунок 11" alt="Рисунок" class="" height="350"></div>
+					<div><img src=<%= asset_path('risunok12.jpg') %> title="Рисунок 12" alt="Рисунок" class="" height="350"></div>
+		    </div><!-- #slider center -->
+        
+        <div class="col-lg-12">
+          <hr>
+          <h2 class="intro-text text-center">Декор</br></h2>
+          <hr>
+        </div></br><!-- #col-lg-12  Декор -->  
+		    <div class="slider center" id = "gallery3">
+	                <div><img src=<%= asset_path('dekor1.jpg') %> title="Декор 1" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor2.jpg') %> title="Декор 2" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor3.jpg') %> title="Декор 3" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor4.jpg') %> title="Декор 4" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor5.jpg') %> title="Декор 5" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor6.jpg') %> title="Декор 6" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor7.jpg') %> title="Декор 7" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor8.jpg') %> title="Декор 8" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor9.jpg') %> title="Декор 9" alt="Декор" class="" height="350"></div>
+					<div><img src=<%= asset_path('dekor10.jpg') %> title="Декор 10" alt="Декор" class="" height="350"></div>
+		    </div><!-- #slider center -->
 
-            <div class="clearfix"></div>
-		     </div><!-- #box -->
-		 
-		</div><!-- #jumbotron center --> 
+        <div class="clearfix"></div>
+      </div><!-- #row --> 
+	</div><!-- #jumbotron center --> 
 </div><!-- #container -->		
