--- a/app/views/pages/lessons.html.erb
+++ b/app/views/pages/lessons.html.erb
@@ -1,40 +1,38 @@
 <div class="container"> 
-		<div class="jumbotron center">
-		    <div class="box">
-		            <div class="col-lg-12">
-                        <hr>
-                        <h2 class="intro-text text-center">Наши занятия</br></h2>
-                        <hr>
-                </div></br><!-- #col-lg-12 Наши занятия --> 
+	<div class="jumbotron center">
+        <div class="row">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">Наши занятия</br></h2>
+                <hr>
+            </div></br><!-- #col-lg-12 Наши занятия --> 
 
-		            <div class="col-lg-4 col-sm-6">
-		                <img class="img-circle img-responsive img-center pull-center" src=<%= asset_path('gyvopis.jpg') %> alt="Живопись" style="width:200px;height:200px"/>
-		                <h3>Живопись</h3>
-		                <p class="column">В нашей студии мы пишем маслом и акварелью, акрилом и темперой, так же рисуем пастелью, которую все любят за цвет, но, тем не менее, этот материал относится к средствам графики. Ученики пробуют себя в цвете, осваивая все эти прекрасные материалы и техники.</p>
-		            </div><!-- #col-lg-4 col-sm-6 Живопись --> 
-		            <div class="col-lg-4 col-sm-6">
-		                <img class="img-circle img-responsive img-center" src=<%= asset_path('risunok.jpg') %> alt="Рисунок" style="width:200px;height:200px"/>
-		                <h3>Рисунок</h3>
-		                <p class="column">Натюрморты, гипсы, рисование с натуры – классический академический рисунок карандашом, где шаг за шагом изучаем основы рисования, форму, объем, правила перспективы – все для грамотного построение предметов в пространстве. Рисунок углем, сангиной, соусом – мы осваиваем эти графические техники, которые дают возможности быстрого, «живописного» рисования.</p>
-		            </div><!-- #col-lg-4 col-sm-6 Рисунок -->
-		            <div class="col-lg-4 col-sm-6">
-		                <img class="img-circle img-responsive img-center" src=<%= asset_path('dekor.jpg') %> alt="Декор" style="width:200px;height:200px"/>
-		                <h3>Декор</h3>
-		                <p class="column">А для тех, кто очень хочет творческого самовыражения, но пока не решается взять в руки кисть, есть прекрасная возможность для творчества – декупаж, витражная роспись, и множество других техник декоративно-прикладного искусства.</p>
-		            </div><!-- #col-lg-4 col-sm-6 Декор -->
-                <div class="clear"></div>
-		            <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Расписание занятий</br></h2>
-                    <hr>
-                </div></br><!-- #col-lg-12 Расписание занятий -->
-                <h3>Четверг: 19.00 - 21.30</h3>
-                <div class="col-md-12">
-                        <p><strong>На первое занятие</strong> материалы приносить не нужно, в студии есть все материалы, которые необходимы для занятий. На уроках вы осваиваете все художественные техники, а затем, постепенно, составляете свой собственный набор любимых материалов, который будет с Вами.</p>
-		            </div> <!-- #col-lg-12 Про первое занятие -->   
-		            <div class="clearfix"></div>
-		      </div><!-- #box --> 
-		 
-		 
-		</div><!-- #jumbotron center --> 
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive img-center pull-center" src=<%= asset_path('gyvopis.jpg') %> alt="Живопись" style="width:200px;height:200px"/>
+                <h3>Живопись</h3>
+                <p class="column">В нашей студии мы пишем маслом и акварелью, акрилом и темперой, так же рисуем пастелью, которую все любят за цвет, но, тем не менее, этот материал относится к средствам графики. Ученики пробуют себя в цвете, осваивая все эти прекрасные материалы и техники.</p>
+            </div><!-- #col-lg-4 col-sm-6 Живопись --> 
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive img-center" src=<%= asset_path('risunok.jpg') %> alt="Рисунок" style="width:200px;height:200px"/>
+                <h3>Рисунок</h3>
+                <p class="column">Натюрморты, гипсы, рисование с натуры – классический академический рисунок карандашом, где шаг за шагом изучаем основы рисования, форму, объем, правила перспективы – все для грамотного построение предметов в пространстве. Рисунок углем, сангиной, соусом – мы осваиваем эти графические техники, которые дают возможности быстрого, «живописного» рисования.</p>
+            </div><!-- #col-lg-4 col-sm-6 Рисунок -->
+            <div class="col-lg-4 col-sm-6">
+                <img class="img-circle img-responsive img-center" src=<%= asset_path('dekor.jpg') %> alt="Декор" style="width:200px;height:200px"/>
+                <h3>Декор</h3>
+                <p class="column">А для тех, кто очень хочет творческого самовыражения, но пока не решается взять в руки кисть, есть прекрасная возможность для творчества – декупаж, витражная роспись, и множество других техник декоративно-прикладного искусства.</p>
+            </div><!-- #col-lg-4 col-sm-6 Декор -->
+            <div class="clear"></div>
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">Расписание занятий</br></h2>
+                <hr>
+            </div></br><!-- #col-lg-12 Расписание занятий -->
+            <h3>Четверг: 19.00 - 21.30</h3>
+            <div class="col-md-12">
+                <p><strong>На первое занятие</strong> материалы приносить не нужно, в студии есть все материалы, которые необходимы для занятий. На уроках вы осваиваете все художественные техники, а затем, постепенно, составляете свой собственный набор любимых материалов, который будет с Вами.</p>
+            </div> <!-- #col-lg-12 Про первое занятие -->   
+            <div class="clearfix"></div>
+        </div><!-- #row --> 
+	</div><!-- #jumbotron center --> 
 </div><!-- #container --> 		
